# lp-ftbfs-report

./: .gitignore  README.md  build_status.html  build_status.py  pyproject.toml
.github/workflows/: ci.yml
source/: build_status.html  build_status.py  style.css
src/: build_status.py
src/lp_ftbfs_report/: __init__.py  build_status.html  build_status.py  csv_generator.py  data_fetcher.py  filters.js  html_generator.py  models.py  style.css
src/lp_ftbfs_report/fetchers/: __init__.py  base.py  dummy.py  ppa.py  test_rebuild.py
tests/: conftest.py  test_dummy_fetcher.py
tests/fixtures/: README.md  comprehensive.json  sample.json  schema.json
tests/frontend/: biome.json  filters.test.ts  package.json  tsconfig.json
