[project]
name = "lp-ftbfs-report"
version = "1.0.0"
description = "Launchpad FTBFS (Failed To Build From Source) report generator"
readme = "README.md"
license = { text = "GPL-2.0-or-later" }
authors = [
    { name = "Michael Bienia", email = "geser@ubuntu.com" },
    { name = "Andrea Gasparini", email = "gaspa@yattaweb.it" },
]
requires-python = ">=3.10"
dependencies = [
    "python-debian>=0.1.0",
    "jinja2>=3.0.0",
    "launchpadlib>=1.10.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "poethepoet>=0.24.0",
]

[project.scripts]
lp-ftbfs-report = "lp_ftbfs_report.build_status:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lp_ftbfs_report"]

[tool.hatch.build.targets.sdist]
include = ["src/lp_ftbfs_report"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["lp_ftbfs_report"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "poethepoet>=0.24.0",
]

[tool.poe.tasks]
lint = "ruff check src/"
format = "ruff format src/"
check = ["lint"]
clean = { shell = "rm -rf .ruff_cache/ dist/ *.egg-info/ && find . -type d -name __pycache__ -exec rm -rf {} + 2>/dev/null || true" }
